--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     </main>
     <footer>
-        Desarrollado por Evert Heredia Santander
+        Desarrollado por Evert Heredia y Alexis Acosta
     </footer>
     <script src="codigo.js"></script>
 </body>
